Fix IE11 Login dialog, remove horizontal scrollbars

--- a/front-end/app/styles/_toolbar.scss
+++ b/front-end/app/styles/_toolbar.scss
@@ -130,3 +130,7 @@ md-slider.md-default-theme.md-min[md-discrete] .md-thumb:after, md-slider.md-min
     border-color: rgb(3,169,244);
     background-color: white;
 }
+
+.login-modal-container{
+  overflow: hidden;
+}
